samples/_failures_safe/1761096446_925d95_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_eec299db.c: In function ‘main’:
./samples/SAFE/__tmp_eec299db.c:133:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  133 |     for (int i
      |     ^~~
./samples/SAFE/__tmp_eec299db.c:133:5: error: expected declaration or statement at end of input
